tests/lit/globalchecks/noreturn_00.isa
// RUN: not %iii --max-errors=10 --check-exception-markers --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function T() -> Integer
begin
// CHECK: Type error: Function definition 'T.0' should return a value but does not
end

